llvm-toolchain-14 (1:14.0.6-12) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * Fix hurd build due to missing shared libclang-rt

 -- Samuel Thibault <sthibault@debian.org>  Thu, 16 Feb 2023 13:56:11 +0100

llvm-toolchain-14 (1:14.0.6-11) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Update SV to 4.6.2
  * Disable libc++-$(LLVM_VERSION)-dev-wasm32 on old Debian & Ubuntu:
    bionic buster focal bullseye jammy
    either wasi-libc isn't available or too old or we face bug
    https://sourceware.org/bugzilla/show_bug.cgi?id=27558
  * adjust the lintian override format with the []
  * hardcode a bit less sccache usage

  [ Gianfranco Costamagna ]
  * Fix riscv64 build by adding spirv again (from @paravoid)
  * debian/patches/libclang-cpp-test-link-failure.patch: Cherry-pick
    and change in a minimal way, upstream patch to fix underlinking
    with as-needed default flag (Closes: #1027013)
  * Ignore some wasm32 failures with c++ for now

  [ Samuel Thibault ]
  * Fix hurd build by fixing Linux-specific lines.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 16 Feb 2023 10:44:03 +0100

llvm-toolchain-14 (1:14.0.6-10) unstable; urgency=medium

  * Upload to unstable
  * Add missing epoch (Closes: #1027699)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Jan 2023 15:42:15 +0100

llvm-toolchain-14 (1:14.0.6-10~exp6) experimental; urgency=medium

  * Move libPolly in libpolly-X.Y-dev for real

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Jan 2023 15:42:04 +0100

llvm-toolchain-14 (1:14.0.6-10~exp5) experimental; urgency=medium

  * Create a libpolly-X.Y-dev package
  * Fix the libclang-rt-14-dev-wasm64 description

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 28 Dec 2022 12:35:04 +0100

llvm-toolchain-14 (1:14.0.6-10~exp4) experimental; urgency=medium

  * Move the compiler-rt content into a new package called
    libclang-rt-X.Y-dev (including polly)
  * the wasm targets are shipped into libclang-rt-14-dev-wasm32